# naomi

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  LICENSE  README.md  conanfile.py  index.html  mkdocs.yml  requirements.txt  test_sym_prop_j2.csv
.github/workflows/: ci.yaml  documentation.yaml
basic_usage/: index.html
docs/: index.md  propagation.md
docs/pages/: index.md
examples/simulation/: CMakeLists.txt  main.cpp  simulation_main.cpp
examples/simulation/maneuvers/: hohmann_transfer_example.h
examples/simulation/two_body/: simple_two_body_propagation.h
include/: constants.h  naomi.h
include/attitude/: angular_coordinates.h  attitude_law.h  attitude_provider.h  constant_attitude_provider.h  euler_angles.h  rotation.h  spacecraft_attitude_subsystem.h  torque_free.h  torque_free_provider.h
include/bodies/: celestial_body.h  earth.h
include/control/: controller.h  pid_controller.h  spacecraft_controller.h
include/forces/: force_model.h  two_body_force_model.h  two_body_rot_force_model.h
include/frames/: frame.h  transforms.h
include/integrators/: integrator.h
include/maneuvers/: hohmann_transfer.h  maneuver.h  maneuver_plan.h
include/math/: quaternion.h  transport_theorem.h  vector_utils.h  volume_integrals.h
include/observers/: simulation_observer.h
include/orbits/: cartesian.h  keplerian.h  orbits.h
include/propagators/: event_detector.h  event_handler.h  numerical_propagator.h
include/simulation/: simulation.h
include/spacecraft/: body_shape.h  pv_coordinates.h  pv_coordinates_provider.h  spacecraft.h  spacecraft_state.h  spacecraft_subsystem.h  state_provider.h  state_vector.h
include/systems/: system.h  two_body.h
naomi/angular__coordinates_8h/: index.html
naomi/angular__coordinates_8h_source/: index.html
naomi/annotated/: index.html
naomi/attitude__provider_8h/: index.html
naomi/attitude__provider_8h_source/: index.html
naomi/body__shape_8h/: index.html
naomi/body__shape_8h_source/: index.html
naomi/cartesian_8h/: index.html
naomi/cartesian_8h_source/: index.html
naomi/celestial__body_8h/: index.html
naomi/celestial__body_8h_source/: index.html
naomi/class_member_enums/: index.html
naomi/class_member_functions/: index.html
naomi/class_member_typedefs/: index.html
naomi/class_member_variables/: index.html
naomi/class_members/: index.html
naomi/classangular__coordinates/: index.html
naomi/classes/: index.html
naomi/classintegrated__provider/: index.html
naomi/classnaomi_1_1attitude_1_1additional__state__provider/: index.html
naomi/classnaomi_1_1attitude_1_1attitude__provider/: index.html
naomi/classnaomi_1_1attitude_1_1constant__attitude__provider/: index.html
naomi/classnaomi_1_1attitude_1_1euler__angles/: index.html
naomi/classnaomi_1_1attitude_1_1rotation/: index.html
naomi/classnaomi_1_1attitude_1_1torque__free__eoms/: index.html
naomi/classnaomi_1_1bodies_1_1celestial__body/: index.html
naomi/classnaomi_1_1bodies_1_1earth/: index.html
naomi/classnaomi_1_1control_1_1control__input/: index.html
naomi/classnaomi_1_1control_1_1controller/: index.html
naomi/classnaomi_1_1control_1_1nadir__pointing__pid__controller/: index.html
naomi/classnaomi_1_1control_1_1pid__controller/: index.html
naomi/classnaomi_1_1events_1_1apside__detector/: index.html
naomi/classnaomi_1_1events_1_1event__detector/: index.html
naomi/classnaomi_1_1events_1_1event__handler/: index.html
naomi/classnaomi_1_1events_1_1time__detector/: index.html
naomi/classnaomi_1_1forces_1_1equations__of__motion/: index.html
naomi/classnaomi_1_1forces_1_1force__model/: index.html
naomi/classnaomi_1_1forces_1_1two__body__force__model/: index.html
naomi/classnaomi_1_1forces_1_1two__body__force__model__eoms/: index.html
naomi/classnaomi_1_1forces_1_1two__body__rot__force__model/: index.html
naomi/classnaomi_1_1frames_1_1frame/: index.html
naomi/classnaomi_1_1geometry_1_1body__shape/: index.html
naomi/classnaomi_1_1maneuvers_1_1bielliptic__hohmann__transfer/: index.html
naomi/classnaomi_1_1maneuvers_1_1hohmann__transfer/: index.html
naomi/classnaomi_1_1maneuvers_1_1maneuver/: index.html
naomi/classnaomi_1_1maneuvers_1_1maneuver__plan/: index.html
naomi/classnaomi_1_1maneuvers_1_1no__such__maneuver__exception/: index.html
naomi/classnaomi_1_1mass__provider/: index.html
naomi/classnaomi_1_1numeric_1_1integrator/: index.html
naomi/classnaomi_1_1numeric_1_1numerical__propagator/: index.html
naomi/classnaomi_1_1observers_1_1results__csv__writer__observer/: index.html
naomi/classnaomi_1_1observers_1_1simulation__observer/: index.html
naomi/classnaomi_1_1orbits_1_1cartesian__orbit/: index.html
naomi/classnaomi_1_1orbits_1_1keplerian__orbit/: index.html
naomi/classnaomi_1_1physical__system/: index.html
naomi/classnaomi_1_1simulation/: index.html
naomi/classnaomi_1_1simulation__component/: index.html
naomi/classnaomi_1_1spacecraft/: index.html
naomi/classnaomi_1_1spacecraft__state/: index.html
naomi/classpv__coordinates/: index.html
naomi/classpv__coordinates__provider/: index.html
naomi/classspacecraft__attitude__subsystem/: index.html
naomi/classspacecraft__subsystem/: index.html
naomi/classspacecraft__subsystem__state/: index.html
naomi/classstate__provider/: index.html
naomi/classtorque__free__attitude__provider/: index.html
notebooks/: Untitled.ipynb
propagation/: index.html
scripts/: compute_eccentricity.py
search/: search_index.json
src/: naomi.cpp
templates/: annotated.jinja2  memDef.jinja2
test_package/: CMakeLists.txt  conanfile.py
tests/: CMakeLists.txt  boost_examples.cpp  test_naomi.cpp
tests/attitude/: test_euler_angles.cpp  test_torque_free.cpp
tests/frames/: test_frame_transforms.cpp
tests/maneuvers/: test_hohmann_transfer.cpp
tests/observers/: test_observer.cpp
tests/orbits/: test_orbit_utils.cpp
tests/resources/: test_cube.txt  test_icosa.txt  test_tetra.txt
tests/simulation/: test_simulation.cpp
tests/spacecraft/: test_body_shape.cpp  test_spacecraft_state.cpp
(+129 files in other folders)
